{{$NEXT}}

0.18     2016-11-13

- Using coercions with positional parameters could cause a "Modification of a
  read-only value attempted" exception when the generated code tried to assign
  to elements of @_. This is now fixed by making a copy if any of the types
  have a coercion.

- Using Moose types with coercions in a positional params check would cause
  invalid code to be generated. This could also happen with Type::Tiny if
  either the type or a coercion could not be inlined.


0.17     2016-11-04

- When using positional parameters, parameters with a default are now
  optional. For named parameters, this was already the case.


0.16     2016-11-03

- Moose and Specio types (and coercions) which provide variables to close over
  when being inlined did not always compile properly. Most notable, this was
  not being handled at all for Moose types, and not completely handled for
  Specio coercions.


0.15     2016-11-03

- Previously, using a default with a positional parameter would result in an
  error when compiling the validator subroutine. Defaults now work with
  positional parameters. Implemented by Greg Oschwald. Based on PR #5.


0.14     2016-11-02

- Added a "named_to_list" option to support returning only the parameter
  values from a named parameter validator rather than the key-value
  pairs. Implemented by Greg Oschwald. Based on PR #4.

- Errors from calls to validation_for() now use croak so as to show up at the
  call site, rather than in the internals


0.13     2016-09-16

- Small fixes to make sure that you can pass both readonly and locked hashes
  to both validation_for and the subroutine it creates for you. Locked hashes
  work and readonly hashes sort of work on some Perls.

- Added a new parameter, "name_is_optional". When this is true, the "name"
  parameter is simply ignored when Sub::Util is not available, rather than
  causing an exception.

- Removed List::SomeUtils as a prereq.


0.12     2016-08-16
