@@ -5,6 +5,7 @@ use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
 
 use Params::ValidationCompiler qw( validation_for );
+use Specio::Declare;
 use Specio::Library::Builtins;
 
 {
